--- a/src/app/my-projects/my-projects.scss
+++ b/src/app/my-projects/my-projects.scss
@@ -11,7 +11,6 @@
 }
 .project-box{
     width: 100%;
-    height: 548px;
     background-color: var(--overlay);
     display: flex;
     justify-content: space-around;
@@ -54,11 +53,10 @@
     justify-content: center;
     align-items: start;
 }
-.project-details-moblie{
+.project-details-mobile{
     display: none;
 }
 .project-details-base{
-    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -123,7 +121,7 @@
     .project-details{
         display: none;
     }
-    .project-details-moblie{
+    .project-details-mobile{
         width: 100%;
         display: flex;
         justify-content: center;
